# Dishynator

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: __init__.py  app.py  image_processing.py  ui.py
tests/: __init__.py  test_image_processing.py
