[project]
name = "Dishynator"
version = "0.1.0"
description = "Application to analyze plant images"
authors = [
    {name = "Jeremy", email = "jeremytang.contact@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas~=2.2.0",
    "streamlit~=1.29.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

test = [
    "pytest==8.0.0",
    "pytest-cov>=4.1.0",
]

docs = [
    "sphinx>=7.2.0",
    "mkdocs>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/
'''